Fix 2 : Outout 3 API
